# Aria

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/lib/: main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/web/: next.config.js  package.json
infrastructure/minio/certs/: README.md
plans/input-intelligence-sprint/: implementation-plan.md
plans/musical-understanding-sprint/: implementation-plan.md
services/agent/: Dockerfile  pyproject.toml
services/agent/src/agent/: assets.py  config.py  graph.py  llm.py  main.py  models.py  nodes.py  state.py  store.py
services/analysis/: Dockerfile  requirements.txt
services/analysis/app/: fusion.py  main.py
services/analysis/tests/: test_fusion.py
services/api/: .dockerignore  Dockerfile  openapi.yaml  package-lock.json  package.json  tsconfig.json
services/api/prisma/: schema.prisma
services/api/src/: app.module.ts  config.ts  main.ts
services/api/test/: artifacts-db.test.js  artifacts-list.test.js  artifacts-storage.test.js  artifacts.test.js  ingestion.test.js  inputs.test.js  phase-two.test.js  projects-brief.test.js  songs.test.js  understanding-contracts.test.js  understanding-generate.test.js  understanding-retrieval.test.js
services/composition/: Dockerfile  pyproject.toml
services/composition/src/composition/: main.py
services/lyrics/: Dockerfile  pyproject.toml
services/lyrics/src/lyrics/: config.py  llm.py  main.py
services/mixing/: Dockerfile  pyproject.toml
(+86 files in other folders)
